assignment1/target/main/bkool/parser/BKOOLParser.java
// Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BKOOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, BLOCK_CMT=2, LINE_CMT=3, BOOLEAN=4, INT=5, FLOAT=6, STRING=7, 
		VOID=8, IF=9, THEN=10, ELSE=11, FOR=12, TO=13, DOWNTO=14, DO=15, BREAK=16, 
		CONTINUE=17, CLASS=18, EXTENDS=19, THIS=20, FINAL=21, STATIC=22, NIL=23, 
		NEW=24, RETURN=25, ADD=26, SUB=27, MUL=28, FLOAT_DIV=29, INT_DIV=30, MOD=31, 
		NE=32, EQUAL=33, LT=34, GT=35, LTE=36, GTE=37, OR=38, AND=39, NOT=40, 
		CONCATENATION=41, ASSIGN=42, INIT=43, LSB=44, RSB=45, LCB=46, RCB=47, 
		LP=48, RP=49, SEMI=50, COLON=51, DOT=52, COMMA=53, INTLIT=54, FLOATLIT=55, 
		BOOLLIT=56, STRINGLIT=57, UNCLOSE_STRING=58, ILLEGAL_ESCAPE=59, ID=60, 
		WS=61, ERROR_CHAR=62;
	public static final int
		RULE_program = 0, RULE_class_decl = 1, RULE_class_mem = 2, RULE_class_mem_list = 3, 
		RULE_class_mem_decl = 4, RULE_attr_decl = 5, RULE_const_attr_decl = 6, 
		RULE_static_attr_decl = 7, RULE_static_const_attr_decl = 8, RULE_attr_decl_list = 9, 
		RULE_attr_decl_unit = 10, RULE_method_decl = 11, RULE_param_list = 12, 
		RULE_param_decl = 13, RULE_param = 14, RULE_idlist = 15, RULE_constructor_decl = 16, 
		RULE_class_type = 17, RULE_decl_type = 18, RULE_primitive_type = 19, RULE_array_type = 20, 
		RULE_stmt = 21, RULE_block_stmt = 22, RULE_local_var_decls = 23, RULE_local_var_decl = 24, 
		RULE_var_decl = 25, RULE_const_decl = 26, RULE_decl_list = 27, RULE_decl_unit = 28, 
		RULE_stmts = 29, RULE_assign_stmt = 30, RULE_lhs = 31, RULE_lhs_unit = 32, 
		RULE_lhs_member_access_expr = 33, RULE_lhs_index_expr = 34, RULE_if_stmt = 35, 
		RULE_if_then_else_stmt = 36, RULE_if_then_stmt = 37, RULE_for_stmt = 38, 
		RULE_break_stmt = 39, RULE_continue_stmt = 40, RULE_return_stmt = 41, 
		RULE_method_invocation_stmt = 42, RULE_expr = 43, RULE_expr1 = 44, RULE_expr2 = 45, 
		RULE_expr3 = 46, RULE_expr4 = 47, RULE_expr5 = 48, RULE_expr6 = 49, RULE_expr7 = 50, 
		RULE_expr8 = 51, RULE_expr9 = 52, RULE_expr10 = 53, RULE_expr11 = 54, 
		RULE_expr12 = 55, RULE_method_call = 56, RULE_expr_list = 57, RULE_literal = 58, 
		RULE_arrlit = 59, RULE_literal_list = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_decl", "class_mem", "class_mem_list", "class_mem_decl", 
			"attr_decl", "const_attr_decl", "static_attr_decl", "static_const_attr_decl", 
			"attr_decl_list", "attr_decl_unit", "method_decl", "param_list", "param_decl", 
			"param", "idlist", "constructor_decl", "class_type", "decl_type", "primitive_type", 
			"array_type", "stmt", "block_stmt", "local_var_decls", "local_var_decl", 
			"var_decl", "const_decl", "decl_list", "decl_unit", "stmts", "assign_stmt", 
			"lhs", "lhs_unit", "lhs_member_access_expr", "lhs_index_expr", "if_stmt", 
			"if_then_else_stmt", "if_then_stmt", "for_stmt", "break_stmt", "continue_stmt", 
			"return_stmt", "method_invocation_stmt", "expr", "expr1", "expr2", "expr3", 
			"expr4", "expr5", "expr6", "expr7", "expr8", "expr9", "expr10", "expr11", 
			"expr12", "method_call", "expr_list", "literal", "arrlit", "literal_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'boolean'", "'int'", "'float'", "'string'", 
			"'void'", "'if'", "'then'", "'else'", "'for'", "'to'", "'downto'", "'do'", 
			"'break'", "'continue'", "'class'", "'extends'", "'this'", "'final'", 
			"'static'", "'nil'", "'new'", "'return'", "'+'", "'-'", "'*'", "'/'", 
			"'\\'", "'%'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", 
			"'&&'", "'!'", "'^'", "':='", "'='", "'['", "']'", "'{'", "'}'", "'('", 
			"')'", "';'", "':'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "BLOCK_CMT", "LINE_CMT", "BOOLEAN", "INT", "FLOAT", 
			"STRING", "VOID", "IF", "THEN", "ELSE", "FOR", "TO", "DOWNTO", "DO", 
			"BREAK", "CONTINUE", "CLASS", "EXTENDS", "THIS", "FINAL", "STATIC", "NIL", 
			"NEW", "RETURN", "ADD", "SUB", "MUL", "FLOAT_DIV", "INT_DIV", "MOD", 
			"NE", "EQUAL", "LT", "GT", "LTE", "GTE", "OR", "AND", "NOT", "CONCATENATION", 
			"ASSIGN", "INIT", "LSB", "RSB", "LCB", "RCB", "LP", "RP", "SEMI", "COLON", 
			"DOT", "COMMA", "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "UNCLOSE_STRING", 
			"ILLEGAL_ESCAPE", "ID", "WS", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BKOOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BKOOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BKOOLParser.EOF, 0); }
		public List<Class_declContext> class_decl() {
			return getRuleContexts(Class_declContext.class);
		}
		public Class_declContext class_decl(int i) {
			return getRuleContext(Class_declContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				class_decl();
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(127);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(BKOOLParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(BKOOLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BKOOLParser.ID, i);
		}
		public Class_memContext class_mem() {
			return getRuleContext(Class_memContext.class,0);
		}
		public TerminalNode EXTENDS() { return getToken(BKOOLParser.EXTENDS, 0); }
		public Class_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClass_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declContext class_decl() throws RecognitionException {
		Class_declContext _localctx = new Class_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(CLASS);
			setState(130);
			match(ID);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(131);
				match(EXTENDS);
				setState(132);
				match(ID);
				}
			}

			setState(135);
			class_mem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_memContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(BKOOLParser.LCB, 0); }
		public Class_mem_listContext class_mem_list() {
			return getRuleContext(Class_mem_listContext.class,0);
		}
		public TerminalNode RCB() { return getToken(BKOOLParser.RCB, 0); }
		public Class_memContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_mem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClass_mem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_memContext class_mem() throws RecognitionException {
		Class_memContext _localctx = new Class_memContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_mem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(LCB);
			setState(138);
			class_mem_list();
			setState(139);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_mem_listContext extends ParserRuleContext {
		public Class_mem_declContext class_mem_decl() {
			return getRuleContext(Class_mem_declContext.class,0);
		}
		public Class_mem_listContext class_mem_list() {
			return getRuleContext(Class_mem_listContext.class,0);
		}
		public Class_mem_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_mem_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClass_mem_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_mem_listContext class_mem_list() throws RecognitionException {
		Class_mem_listContext _localctx = new Class_mem_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_mem_list);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case INT:
			case FLOAT:
			case STRING:
			case VOID:
			case FINAL:
			case STATIC:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(141);
				class_mem_decl();
				setState(142);
				class_mem_list();
				}
				}
				break;
			case RCB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_mem_declContext extends ParserRuleContext {
		public Method_declContext method_decl() {
			return getRuleContext(Method_declContext.class,0);
		}
		public Const_attr_declContext const_attr_decl() {
			return getRuleContext(Const_attr_declContext.class,0);
		}
		public Static_attr_declContext static_attr_decl() {
			return getRuleContext(Static_attr_declContext.class,0);
		}
		public Static_const_attr_declContext static_const_attr_decl() {
			return getRuleContext(Static_const_attr_declContext.class,0);
		}
		public Attr_declContext attr_decl() {
			return getRuleContext(Attr_declContext.class,0);
		}
		public Constructor_declContext constructor_decl() {
			return getRuleContext(Constructor_declContext.class,0);
		}
		public Class_mem_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_mem_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClass_mem_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_mem_declContext class_mem_decl() throws RecognitionException {
		Class_mem_declContext _localctx = new Class_mem_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_mem_decl);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				method_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				const_attr_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				static_attr_decl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				static_const_attr_decl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				attr_decl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(152);
				constructor_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_declContext extends ParserRuleContext {
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Attr_decl_listContext attr_decl_list() {
			return getRuleContext(Attr_decl_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public Attr_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitAttr_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_declContext attr_decl() throws RecognitionException {
		Attr_declContext _localctx = new Attr_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attr_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			decl_type();
			setState(156);
			attr_decl_list();
			setState(157);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_attr_declContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(BKOOLParser.FINAL, 0); }
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Attr_decl_listContext attr_decl_list() {
			return getRuleContext(Attr_decl_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public Const_attr_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_attr_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitConst_attr_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Const_attr_declContext const_attr_decl() throws RecognitionException {
		Const_attr_declContext _localctx = new Const_attr_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_attr_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(FINAL);
			setState(160);
			decl_type();
			setState(161);
			attr_decl_list();
			setState(162);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Static_attr_declContext extends ParserRuleContext {
		public TerminalNode STATIC() { return getToken(BKOOLParser.STATIC, 0); }
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Attr_decl_listContext attr_decl_list() {
			return getRuleContext(Attr_decl_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public Static_attr_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_attr_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitStatic_attr_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Static_attr_declContext static_attr_decl() throws RecognitionException {
		Static_attr_declContext _localctx = new Static_attr_declContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_static_attr_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(STATIC);
			setState(165);
			decl_type();
			setState(166);
			attr_decl_list();
			setState(167);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Static_const_attr_declContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(BKOOLParser.FINAL, 0); }
		public TerminalNode STATIC() { return getToken(BKOOLParser.STATIC, 0); }
		public Decl_typeContext decl_type() {
			return getRuleContext(Decl_typeContext.class,0);
		}
		public Attr_decl_listContext attr_decl_list() {
			return getRuleContext(Attr_decl_listContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BKOOLParser.SEMI, 0); }
		public Static_const_attr_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_const_attr_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitStatic_const_attr_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Static_const_attr_declContext static_const_attr_decl() throws RecognitionException {
		Static_const_attr_declContext _localctx = new Static_const_attr_declContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_static_const_attr_decl);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FINAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				match(FINAL);
				setState(170);
				match(STATIC);
				setState(171);
				decl_type();
				setState(172);
				attr_decl_list();
				setState(173);
				match(SEMI);
				}
				break;
			case STATIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				match(STATIC);
				setState(176);
				match(FINAL);
				setState(177);
				decl_type();
				setState(178);
				attr_decl_list();
				setState(179);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_decl_listContext extends ParserRuleContext {
		public Attr_decl_unitContext attr_decl_unit() {
			return getRuleContext(Attr_decl_unitContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(BKOOLParser.COMMA, 0); }
		public Attr_decl_listContext attr_decl_list() {
			return getRuleContext(Attr_decl_listContext.class,0);
		}
		public Attr_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_decl_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitAttr_decl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_decl_listContext attr_decl_list() throws RecognitionException {
		Attr_decl_listContext _localctx = new Attr_decl_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_attr_decl_list);
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(183);
				attr_decl_unit();
				setState(184);
				match(COMMA);
				setState(185);
				attr_decl_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				attr_decl_unit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_decl_unitContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public TerminalNode INIT() { return getToken(BKOOLParser.INIT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Attr_decl_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_decl_unit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitAttr_decl_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_decl_unitContext attr_decl_unit() throws RecognitionException {
		Attr_decl_unitContext _localctx = new Attr_decl_unitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attr_decl_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(ID);
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INIT) {
				{
				setState(191);
				match(INIT);
				setState(192);
				expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
